--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ header {
 	float: left;
 	height: 0px;
 	top: -20px;
+	height: 900PX;
 }
 main {
 	margin-top: 60px;
@@ -18,6 +19,11 @@ main {
 #container {
 	width: 1020px;
 	margin: 0px auto;
+}
+video {
+	display: block;
+	position: relative;
+	top: -60px;
 }
 
 /*---NAVBAR---*/
@@ -35,11 +41,12 @@ nav ul li{
 	width: 170px;
 	text-align: center;
 	margin-top: 17px;
-	font-size: 22px;
+
 }
 nav ul li a {
 	color: white;
 	text-decoration: none;
+	font-size: 22px;
 }
 nav ul li a h1 {
 	position: relative;
@@ -49,7 +56,7 @@ nav ul li a h1 {
 }
 #bar-to-right {
 	position: absolute;
-	right: 0px;
+	right: -14px;
 	margin: 0px;
 }
 
@@ -82,17 +89,19 @@ nav ul li a h1 {
 main h2 {
 	font-size: 42px;
 	position: relative;
-	top: 30px;
+	top: 70px;
 }
 main p {
 	font-size: 24px;
+	position: relative;
+	top: 40px;
 }
 
 /*---ODSTAVEC-1---*/
 #img-odst-1 {
 	width: 350px;
 	float: right;
-	margin-left: 30px;
+	margin: 50PX 0PX 50px 30px;
 	border-radius: 15px;
 }
 #odst-1 {
@@ -103,8 +112,9 @@ main p {
 #img-odst-2 {
 	width: 350px;
 	float: left;
-	margin-right: 30px;
+	margin: 50PX 30PX 50px 0px;
 	border-radius: 15px;
+
 }
 #odst-2 {
 	text-align: right;
@@ -117,15 +127,16 @@ main p {
 }
 #bloky h2 {
 	font-size: 42px;
-	margin-top: -20px;
+	margin-top: -65px;
 }
 #bloky p {
 	font-size: 18px;
 	margin: 30px;
+	margin-top: 10px;
 }
 .b-img {
 	width: 230px;
-	margin-top: 30px;
+	margin-top: 35px;
 	border-radius: 30px 0px;
 }
 
@@ -171,8 +182,8 @@ footer {
 }
 footer p {
 	font-size: 22px;
-	padding: 20px 0px;
-	margin-bottom: 5px;
+	padding: 30px 0px;
+	margin-bottom: 0px;
 }
 
 
