--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ video {
 	display: block;
 	position: relative;
 	top: -60px;
+	margin: 0px auto;
 }
 
 /*---NAVBAR---*/
@@ -34,6 +35,7 @@ nav {
 	border-radius: 20px;
 	position: relative;
 	top: -950px;
+	margin: 0px auto;
 }
 nav ul li{
 	list-style-type: none;
