--- a/o-regionu-style.css
+++ b/o-regionu-style.css
@@ -16,7 +16,7 @@ main {
 }
 
 /*---CONTAINERS---*/
-#container {
+.container {
 	width: 1020px;
 	margin: 0px auto;
 }
@@ -24,8 +24,7 @@ main {
 	display: block;
 	position: relative;
 	top: -60px;
-	margin: 0px auto;
-	
+	margin: 0px auto;	
 }
 
 /*---NAVBAR---*/
