--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ main p {
 #img-odst-2 {
 	width: 350px;
 	float: left;
-	margin: 50PX 30PX 50px 0px;
+	margin: 50px 30px 50px 0px;
 	border-radius: 15px;
 
 }
