--- a/o-regionu-style.css
+++ b/o-regionu-style.css
@@ -14,6 +14,13 @@ header {
 main {
 	margin-top: 60px;
 }
+img {
+	border-radius: 15px;
+}
+.mezera {
+	display: block;
+	margin-top: 120px;
+}
 
 /*---CONTAINERS---*/
 .container {
@@ -24,7 +31,8 @@ main {
 	display: block;
 	position: relative;
 	top: -60px;
-	margin: 0px auto;	
+	margin: 0px auto;
+	border-radius: 0px;	
 }
 
 /*---NAVBAR---*/
@@ -81,6 +89,40 @@ nav ul li a h1 {
 	color: white;
 	font-size: 22px;
 }
+
+/*---MAIN---*/
+main h2 {
+	position: relative;
+	top: 30px;
+	font-size: 42px;
+}
+main p {
+	font-size: 22px;
+}
+.con1 {
+	width: 480px;
+	float: left;
+	margin-bottom: 120px;
+}
+.con2 {
+	width: 480px;
+	float: right;
+	text-align: right;
+	margin-bottom: 120px;
+}
+#img-oblasti {
+	float: right;
+}
+.oblast-reg {
+	width: 500px;
+	float: left;
+	margin: 100px 45px 100px 0px;
+}
+#img-dovolena {
+	margin-bottom: 150px;
+}
+
+
 /*---FOOTER---*/
 footer {
 	background-color: #385863b3;
