--- a/styles/ricky-style.css
+++ b/styles/ricky-style.css
@@ -12,7 +12,7 @@ header {
 	top: -20px;
 }
 main {
-    height: 2000px;
+    height: 3600px;
 }
 img {
     display: block;
@@ -76,9 +76,24 @@ main p {
     font-size: 24px;
     margin: 20px auto 40px auto;
 }
+main ul li {
+    font-size: 24px;
+    margin-bottom: 5px;
+}
 .posun {
     position: relative;
     top: 150px;
+}
+.img1 {
+    display: block;
+    float: left;
+    margin-bottom: 50px;
+}
+.img2 {
+    display: block;
+    float: left;
+    margin-left: 60px;
+    margin-bottom: 50px;
 }
 
 ---FOOTER---
